Fix: addressed layout issues

--- a/src/chronology/ui/DateConverter/DateConverterForm.sass
+++ b/src/chronology/ui/DateConverter/DateConverterForm.sass
@@ -6,6 +6,7 @@
     align-items: stretch
     border-bottom: 1px grey solid
     padding-top: 10px
+    padding-bottom: 10px
 
 .section-row:last-child
     border-bottom: none
